tests/internal/negative_case/bad_assign_type_mismatch_ptr_base.c
// Expected: compile fail (incompatible pointer assignment types)
int main(void) {
  int *ip;
  double *dp;
  ip = dp;
  return 0;
}
